Split the current 'symbol' implementation to separate core symbols from x86_64 ones.  Change name to xensym to logically separate from regular symbols in a symbol table.

--- a/docs/namespaces.dox
+++ b/docs/namespaces.dox
@@ -14,7 +14,21 @@
  */
 
 /**
+ * @namespace Abstract::xensyms
+ *
+ * Small namespace containing the xensyms for architecture independent
+ * areas of Xen.
+ */
+
+
+/**
  * @namespace x86_64
  *
  * Xen x86_64 architecture namespace, for 64bit x86.
+ */
+
+/**
+ * @namespace x86_64::xensyms
+ *
+ * Small namespace containing the xensyms for the x86_64 areas of Xen.
  */
