--- a/ChangeLog
+++ b/ChangeLog
@@ -1,34 +1,42 @@
-2.4.1 (2013-05-08):
-* Find VCPU state on IST stacks when appropriate
+* Wed May 08 2013 Andrew Cooper <andrew.cooper3@citrix.com>
+Version 2.4.1
+- Find VCPU state on IST stacks when appropriate
 
-2.4.0 (2013-04-12):
-* Various bug fixes
-* Add debugging info for console rings
-* Allow detection of a Xen debug build
-* Doxygen updates
-* Move classes into namespaces
+* Fri Apr 12 2013 Andrew Cooper <andrew.cooper3@citrix.com>
+Version 2.4.0
+- Various bug fixes
+- Add debugging info for console rings
+- Allow detection of a Xen debug build
+- Doxygen updates
+- Move classes into namespaces
 
-2.3.0 (2012-10-08):
-* Improve error messages and logging support
-* Try to leave a meaningful log when the filesystem is out of space
-* Print PCPU numbers in decimal rather than hex
-* Various bug fixes and cleanups
+* Mon Oct 08 2012 Andrew Cooper <andrew.cooper3@citrix.com>
+Version 2.3.0
+- Improve error messages and logging support
+- Try to leave a meaningful log when the filesystem is out of space
+- Print PCPU numbers in decimal rather than hex
+- Various bug fixes and cleanups
 
-2.2.0 (2012-08-22):
-* Add checks for domain paging support
-* Collect CPU information for decoding vendor-specific data
-* Add option to dump Xen domain and vcpu structures
-* Various bug fixes and cleanups
+* Wed Aug 22 2012 Andrew Cooper <andrew.cooper3@citrix.com>
+Version 2.2.0
+- Add checks for domain paging support
+- Collect CPU information for decoding vendor-specific data
+- Add option to dump Xen domain and vcpu structures
+- Various bug fixes and cleanups
 
-2.1.0 (2012-06-12):
-* Print domain handles from Xen (includes VM UUID)
+* Tue Jun 12 2012 Andrew Cooper <andrew.cooper3@citrix.com>
+Version 2.1.0
+- Print domain handles from Xen (includes VM UUID)
 
-2.0.0 (2012-06-07):
-* Change to GPLv2
-* Significant refactoring
+* Thu Jun 07 2012 Andrew Cooper <andrew.cooper3@citrix.com>
+Version 2.0.0
+- Change to GPLv2
+- Significant refactoring
 
-1.1.0 (2012-03-27):
-* Numerous minor fixes
+* Tue Mar 27 2012 Andrew Cooper <andrew.cooper3@citrix.com>
+Version 1.1.0
+- Numerous minor fixes
 
-1.0.0 (2012-01-19):
-* Initial version.
+* Thu Jan 19 2012 Andrew Cooper <andrew.cooper3@citrix.com>
+Version 1.0.0
+- Initial version.
